infra/kubernetes/observability/grafana/grafana-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana
  namespace: observability

spec:
  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000
